// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormInputWithPlaceholderField render placeholder and input field should not render label and render input with placeholder and value as empty when no value is specified 1`] = `
<div>
  <form>
    <div
      class="field"
    >
      <div
        class="form-input-with-placeholder-field"
      >
        <div
          class="input"
        >
          <input
            class=""
            name="RapidRewardsNumber"
            placeholder="Rapid Rewards / Acct#"
            value=""
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`FormInputWithPlaceholderField render placeholder and input field should render label with placeholder and render input with value when a value is specified 1`] = `
<div>
  <form>
    <div
      class="field"
    >
      <div
        class="form-input-with-placeholder-field"
      >
        <label
          class="form-input-with-placeholder-field--label"
        >
          Rapid Rewards / Acct#
        </label>
        <div
          class="input"
        >
          <input
            class=""
            name="RapidRewardsNumber"
            placeholder="Rapid Rewards / Acct#"
            value="123456"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;
